--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "A UI Kit based on Vue",
   "author": "caixudong <693788364@qq.com>",
-  "private": true,
+  "main": "package/cui.min.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "package:dev": "webpack —config build/package.dev.config.js",
+    "package:prod": "webpack —config build/package.prod.config.js",
+    "package": "npm run package:prod && npm publish && npm run build"
   },
   "dependencies": {
     "vue": "^2.5.2",
